<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="100dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="30dp"
        app:cardBackgroundColor="@color/lightGray"
        app:cardCornerRadius="2dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="10dp"
                android:text="@string/shopping_list_dialog_title"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/groceryLinear"
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/groceryNameTextInputLayout"
                    style="@style/CustomInputLayout.OutlineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/grocery_name"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/groceryNameTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:maxLength="15" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/quantityTextInputLayout"
                    style="@style/CustomInputLayout.OutlineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/grocery_quantity"
                    app:counterEnabled="true"
                    app:counterMaxLength="4"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/quantityTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:maxLength="4" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/amountTextInputLayout"
                    style="@style/CustomInputLayout.OutlineBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/grocery_amount"
                    app:counterEnabled="true"
                    app:counterMaxLength="4"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/amountTextInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:inputType="numberDecimal"
                        android:maxLength="4" />

                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@color/lightGray"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="4dp">

                <TextView
                    android:id="@+id/moreTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_add"
                    android:drawablePadding="8dp"
                    android:text="@string/more"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/descAndPhotoLinear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="8dp"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/closeMoreActionTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawablePadding="8dp"
                        android:text="@string/decline"
                        android:layout_gravity="right"
                        android:layout_marginBottom="12dp"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/descTextInputLayout"
                        style="@style/CustomInputLayout.OutlineBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/add_desc"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/descTextInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeOptions="actionDone"
                            android:inputType="text"
                            android:maxLines="5" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:id="@+id/addPhotoTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_gallery"
                        android:drawablePadding="8dp"
                        android:text="@string/add_photo"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/addNewGroceryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="65dp"
                android:layout_marginBottom="15dp"
                app:cardBackgroundColor="@color/greenMain">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/add"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>