<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.grocery.GroceryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/greenMain"
            app:layout_scrollFlags="scroll|enterAlways|snap">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:src="@drawable/ic_round_keyboard_backspace" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingTop="20dp"
                android:paddingBottom="20dp"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/grocery_bar_title"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/alarmButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/notification_alarm_icon"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/shareListButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:src="@drawable/ic_share"
                    app:tint="@color/white" />

            </LinearLayout>


        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:id="@+id/descAndPhotoLinear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="12dp"
            android:visibility="gone">

            <TextView
                android:id="@+id/shoppingDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/greenMain"
                android:textSize="18sp"
                tools:text="Denemeee" />

            <ImageView
                android:id="@+id/shoppingReceiptImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/addAlarmContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <EditText
                android:id="@+id/alarmDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/alarm_date"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/alarmTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/alarm_time"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/addAlarm"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/add_alarm"
                    android:textColor="@color/greenMain"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="0.30dp"
                    android:layout_height="match_parent"
                    android:background="@color/black" />

                <TextView
                    android:id="@+id/cancelAlarm"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="@color/red"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layoutAnimation="@anim/layout_animation"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addGroceryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/ic_round_add"
        app:backgroundTint="@color/greenMain"
        app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
        app:tint="@android:color/white" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>